# parallel-sgd

./: CMakeLists.txt  activations.h  async_mlp.cpp  common.cpp  common.h  common.hpp  data.cpp  data.hpp  nn.hpp  serial_mlp.cpp  sync_param_mlp.cpp  utilities.h
